# manga-translator

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
src/: __init__.py  detector.py  inpainter.py  ocr.py  pipeline.py  translator.py
